k8s/50-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: hr-backend
  namespace: hr-platform
spec:
  selector:
    app: hr-backend
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr-backend
  namespace: hr-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hr-backend
  template:
    metadata:
      labels:
        app: hr-backend
    spec:
      containers:
        - name: hr-backend
          image: 192.168.255.129:8082/hr-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests: { cpu: 200m, memory: 512Mi }
            limits:   { memory: 1Gi }
          startupProbe:
            tcpSocket: { port: 8080 }
            periodSeconds: 10
            failureThreshold: 40
          readinessProbe:
            tcpSocket: { port: 8080 }
            periodSeconds: 10
          volumeMounts:
            - name: uploads
              mountPath: /data/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads
