k8s/70-ingress.yaml
# =====================================================================
# Point d'entrée unique : http://192.168.255.136:30080
# =====================================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hr-platform
  namespace: hr-platform
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"       # dépôt de CV
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"     # jetons Keycloak volumineux
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"   # connexions WebSocket longues
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service: { name: hr-backend, port: { number: 8080 } }
          - path: /ws
            pathType: Prefix
            backend:
              service: { name: hr-backend, port: { number: 8080 } }
          - path: /auth
            pathType: Prefix
            backend:
              service: { name: keycloak, port: { number: 8080 } }
          - path: /
            pathType: Prefix
            backend:
              service: { name: hr-frontend, port: { number: 8080 } }
